k8s/production/address-book-manage-api/ingress-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: address-book-manage-api-entrypoint
  namespace: default
spec:
  type: NodePort
  selector:
    app: address-book-manage-api
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
