k8s/production/address-book-manage-api/ingress-istio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: address-book-manage-api-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /v1/manage
        pathType: Prefix
        backend:
          service:
            name: address-book-manage-api
            port:
              number: 3000
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: address-book-manage-api-ingress-service
# spec:
#   hosts:
#     - localhost
#   http:
#   - match:
#     - uri:
#         prefix: /manage
#         subset: v1
#     route:
#     - destination:
#         host: localhost
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: address-book-manage-api-ingress-destination
# spec:
#   host: localhost
#   trafficPolicy:
#     loadBalancer:
#       simple: RANDOM
#   subsets:
#   - name: v1
#     labels:
#       version: v1
